--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <!--[if IE 9]> <html lang="en" class="ie9"> <![endif]-->  
 <!--[if !IE]><!--> <html lang="en"> <!--<![endif]-->  
 <head>
-    <title>Responsive Resume/CV Template for Developers</title>
+    <title>Alan Tsai CV</title>
     <!-- Meta -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -31,18 +31,18 @@
         <div class="sidebar-wrapper">
             <div class="profile-container">
                 <img class="profile" src="assets/images/profile.png" alt="" />
-                <h1 class="name">Alan Doe</h1>
-                <h3 class="tagline">Full Stack Developer</h3>
+                <h1 class="name">Alan Tsai</h1>
+                <h3 class="tagline">Asp .Net Mvc 工程師</h3>
             </div><!--//profile-container-->
             
             <div class="contact-container container-block">
                 <ul class="list-unstyled contact-list">
-                    <li class="email"><i class="fa fa-envelope"></i><a href="mailto: yourname@email.com">alan.doe@website.com</a></li>
+                    <li class="email"><i class="fa fa-envelope"></i><a href="mailto: contact@alantsai.net">contact@alantsai.net</a></li>
                     <li class="phone"><i class="fa fa-phone"></i><a href="tel:0123 456 789">0123 456 789</a></li>
-                    <li class="website"><i class="fa fa-globe"></i><a href="http://themes.3rdwavemedia.com/website-templates/free-responsive-website-template-for-developers/" target="_blank">portfoliosite.com</a></li>
-                    <li class="linkedin"><i class="fa fa-linkedin"></i><a href="#" target="_blank">linkedin.com/in/alandoe</a></li>
-                    <li class="github"><i class="fa fa-github"></i><a href="#" target="_blank">github.com/username</a></li>
-                    <li class="twitter"><i class="fa fa-twitter"></i><a href="https://twitter.com/3rdwave_themes" target="_blank">@twittername</a></li>
+                    <li class="website"><i class="fa fa-globe"></i><a href="http://blog.alantsai.net" target="_blank">blog.alantsai.net</a></li>
+                    <li class="linkedin"><i class="fa fa-linkedin"></i><a href="http://linkedin.alantsai.net" target="_blank">linkedin.alantsai.net</a></li>
+                    <li class="github"><i class="fa fa-github"></i><a href="http://github.alantsai.net" target="_blank">github.alantsai.net</a></li>
+                    <li class="twitter"><i class="fa fa-twitter"></i><a href="http://twitter.alantsai.net" target="_blank">@alantsai2007</a></li>
                 </ul>
             </div><!--//contact-container-->
             <div class="education-container container-block">
