--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <!--[if IE 9]> <html lang="en" class="ie9"> <![endif]-->  
 <!--[if !IE]><!--> <html lang="en"> <!--<![endif]-->  
 <head>
-    <title>Alan Tsai CV</title>
+    <title>Tzu-Ning Hung CV</title>
     <!-- Meta -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -31,7 +31,7 @@
         <div class="sidebar-wrapper">
             <div class="profile-container">
                 <img class="profile" src="assets/images/profile.png" alt="" />
-                <h1 class="name">Alan Tsai</h1>
+                <h1 class="name">Tzu-Ning Hung</h1>
                 <h3 class="tagline">Asp .Net Mvc 工程師</h3>
             </div><!--//profile-container-->
             
