--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="profile-container">
                 <img class="profile" src="assets/images/profile.png" alt="" />
                 <h1 class="name">Tzu-Ning Hung</h1>
-                <h3 class="tagline">Asp .Net Mvc 工程師</h3>
+                <h3 class="tagline">大學生</h3>
             </div><!--//profile-container-->
             
             <div class="contact-container container-block">
